package _notifications;

//Afferent Coupling: 1
//Efferent Coupling: 0
//   -> Instability: 0

public abstract class _Notification {

    public abstract void notify_user();

}