package model;

public interface Observer {

    public boolean update();
    
}
