

@startuml diagram
skinparam classAttributeIconSize 0
hide circle

class WebsiteHook {
  -url: String
  -interval_s: int
  -comptype: Comparison_t
  --
  +WebsiteHook(url: String, interval_s: int, comptype: Comparison_t)
  +update(): boolean
  +get_interval_s(): int
}

interface Observer {
  +update(): boolean
}

class User {
  -name: String
  -uid: int
  -webhooks: ArrayList<Observer> = new ArrayList<>()
  --
  +User(name: String, uid: int)
  +getName(): String
  +set_uid(new_uid: int): void
  +attach(webhook: Observer): void
  +getId(): int
  +getWebHooks(): ArrayList<Observer>
  +detach(obs: Observer): void
  +updateObservers(): void
}

interface Subject {
  ~attach(obs: Observer): void
  ~detach(obs: Observer): void
  ~updateObservers(): void
}

class Main {
  +{static} main(args: String[]): void
}

class TimeController {
  -dc: DataController
  --
  +TimeController(dc: DataController)
  +notificationLoop(): void
}

class DataController {
  -DBport: String = "1234"
  -users: ArrayList<User> = new ArrayList<>()
  -newest_uid: int = 0
  --
  +addUser(user: User): void
  +addWebHook(user: User, webhook: WebsiteHook): void
  +getUser(uid: int): User
  +getUsers(): ArrayList<User>
}

class SMS_Notification {
  -user: User
  --
  +SMS_Notification(user: User)
  +notify_user(): void
}

abstract class _Notification {
  +notify_user(): void
}

class UI {
  -dc: DataController
  --
  +UI(dc: DataController)
  +createUser(): void
  +createWebhook(): void
}

WebsiteHook --|> Observer
User --|> Subject
User o-- Observer
Subject ..> Observer
TimeController *-- DataController
DataController o-- User
DataController ..> WebsiteHook
SMS_Notification --|> _Notification
SMS_Notification *-- User
UI *-- DataController
@enduml